from odoo import models, fields, api


class MedicineInfo(models.Model):

    _name = 'medical.insurance.medicine_info'
    _inherit = 'res.partner'

